--- a/src/app/components/administrar/administrar.component.html
+++ b/src/app/components/administrar/administrar.component.html
@@ -7,14 +7,16 @@
   <!-- Filtros y búsqueda -->
   <div class="admin-toolbar">
     <div class="search-group">
-      <input type="text" class="form-control" placeholder="Buscar mascotas..." [(ngModel)]="searchTerm">
-      <button class="btn btn-primary">
+      <input type="text" class="form-control" placeholder="Buscar mascotas..." 
+             [(ngModel)]="searchTerm" 
+             (input)="filterMascotas()">
+      <button class="btn btn-primary" (click)="filterMascotas()">
         <i class="fas fa-search"></i>
       </button>
     </div>
 
     <div class="filter-group">
-      <select class="form-control" [(ngModel)]="selectedFilter">
+      <select class="form-control" [(ngModel)]="selectedFilter" (change)="filterMascotas()">
         <option value="">Todas las mascotas</option>
         <option *ngFor="let filter of filters" [value]="filter.value">{{filter.label}}</option>
       </select>
