--- a/src/app/components/administrar/administrar.component.css
+++ b/src/app/components/administrar/administrar.component.css
@@ -407,3 +407,25 @@ textarea.form-control {
   text-align: center;
   padding: 0;
 }
+
+.pet-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+.pet-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.pet-info-cell {
+  display: flex;
+  align-items: center;
+}
