--- a/src/app/components/administrar/administrar.component.html
+++ b/src/app/components/administrar/administrar.component.html
@@ -304,7 +304,11 @@
                 class="image-preview"
                 *ngFor="let img of existingImages; let i = index"
               >
-                <button class="remove-btn" (click)="removeExistingImage(i)">
+                <button 
+                  type="button" 
+                  class="remove-btn" 
+                  (click)="removeExistingImage(i); $event.stopPropagation()"
+                >
                   ✕
                 </button>
                 <img [src]="img.data" />
@@ -314,7 +318,7 @@
                 class="image-preview"
                 *ngFor="let img of newPreviews; let j = index"
               >
-                <button class="remove-btn" (click)="removeNewImage(j)">
+                <button type="button" class="remove-btn" (click)="removeNewImage(j); $event.stopPropagation()">
                   ✕
                 </button>
                 <img [src]="img.data" />
